<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cesar.firstaplicacion.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hola"
        android:id="@+id/TextOne"
        android:textSize="20sp"
        android:textColor="@color/red"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/HereYou"
        android:text="@string/here"
        android:visibility="invisible"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/txtname"
        android:layout_alignStart="@+id/txtname" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHola"
        android:text="@string/clickeame"
        android:textColor="#109410"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/txtname"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginStart="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtname"
        android:text="@string/nombre"
        android:inputType="text"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clic"
        android:id="@+id/Vamonos"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/HereYou"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
